--- a/index.html
+++ b/index.html
@@ -1,9 +1,16 @@
 <body>
-  <h1> Justin's World </h1>
-  <p> Welcome to Justin's World where the impossible is possible </p> 
   
-  <h2>My Life Story</h2>
-  <h3>Manhattan</h3>
-  <h3>The Bronx</h3>
+  
+  <div>
+    <h1> Justin's World </h1>
+    <p> Welcome to Justin's World where the impossible is possible </p> 
+  </div>
+  
+  <div>
+    <h2>My Life Story</h2>
+    <h3>Manhattan</h3>
+    <h3>The Bronx</h3>
+  </div>
+
 
 </body>
