--- a/index.html
+++ b/index.html
@@ -1,12 +1,12 @@
 <body>
   
   
-  <div>
+  <div id="Introduction">
     <h1> Justin's World </h1>
     <p> Welcome to Justin's World where the impossible is possible </p> 
   </div>
   
-  <div>
+  <div id="Life Story>
     <h2>My Life Story</h2>
     <h3>Manhattan</h3>
     <h3>The Bronx</h3>
