Added Strong Styling Text

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   
   <div id="Introduction">
     <h1> Justin's World </h1>
-    <p> Welcome to Justin's World where the impossible is possible </p> 
+    <p> Welcome to Justin's World where the <strong>impossible</strong> is <strong>possible</strong> </p> 
   </div>
   
   <div id="Life Story>
